--- a/.github/workflows/events-nightly.yml
+++ b/.github/workflows/events-nightly.yml
@@ -82,7 +82,7 @@ jobs:
       fail-fast: false
       matrix:
         python_version: ["3.6", "3.7", "3.8", "3.9"]
-        pytorch_version: ["1.4", "1.5", "1.6", "1.7", "1.8", "1.9", "1.10"]
+        pytorch_version: ["1.5", "1.6", "1.7", "1.8", "1.9", "1.10"]
 
     steps:
       - name: Checkout
@@ -95,12 +95,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # for PT 1.3 and 1.4 we need to use CUDA 10.1
-      - run: |
-          cuda=$(python -c "print(10.2 if float(${{matrix.pytorch_version}}) > 1.4 else 10.1)" 2>&1)
-          echo "::set-output name=CUDA::$cuda"
-        id: extend
-
       - name: Publish CUDA to Docker Hub
         if: ${{ matrix.pytorch_version != '1.10' }}
         # publish master/release
@@ -109,7 +103,6 @@ jobs:
           build-args: |
             PYTHON_VERSION=${{ matrix.python_version }}
             PYTORCH_VERSION=${{ matrix.pytorch_version }}
-            CUDA_VERSION=${{ steps.extend.outputs.CUDA }}
           file: dockers/base-cuda/Dockerfile
           push: true
           tags: pytorchlightning/pytorch_lightning:base-cuda-py${{ matrix.python_version }}-torch${{ matrix.pytorch_version }}
@@ -121,7 +114,7 @@ jobs:
       fail-fast: false
       matrix:
         python_version: ["3.6", "3.7", "3.8", "3.9"]
-        pytorch_version: ["1.4", "1.5", "1.6", "1.7", "1.8", "1.9", "1.10"]
+        pytorch_version: ["1.5", "1.6", "1.7", "1.8", "1.9", "1.10"]
 
     steps:
       - name: Checkout
@@ -141,13 +134,12 @@ jobs:
           build-args: |
             PYTHON_VERSION=${{ matrix.python_version }}
             PYTORCH_VERSION=${{ matrix.pytorch_version }}
-            CUDA_VERSION=${{ steps.extend.outputs.CUDA }}
           file: dockers/base-conda/Dockerfile
           push: true
           tags: pytorchlightning/pytorch_lightning:base-conda-py${{ matrix.python_version }}-torch${{ matrix.pytorch_version }}
         timeout-minutes: 55
 
-  docker-nvidia:
+  docker-Nvidia:
     runs-on: ubuntu-20.04
     # todo: temporarily skip as the base container does not fit to agent
     if: false
@@ -172,7 +164,7 @@ jobs:
           tags: nvcr.io/pytorchlightning/pytorch_lightning:nvidia
         timeout-minutes: 55
 
-  docker-ipu:
+  docker-IPU:
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
